--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </section>
     </main>
     <footer>
-        <p>[PravalikaReddy]</p>
+        <p>[KondamPravalikaReddy]</p>
     </footer>
 </body>
 </html>
